--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -2015,6 +2015,9 @@ msgstr "Elemento en Release"
 msgid "Output: %1"
 msgstr "Salida: %1"
 
+msgid "Precedence"
+msgstr "Precedencia"
+
 msgid "Table"
 msgstr "Tabla"
 
