view folders instead of files - topic drag support

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -519,6 +519,9 @@ msgstr "Permisos de Usuario"
 msgid "Views"
 msgstr "Vistas"
 
+msgid "New View"
+msgstr "Nueva Vista"
+
 msgid "Approve"
 msgstr "Aprobar"
 
