check user exists on create_user_session

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -150,6 +150,9 @@ msgstr "Ver Stash"
 msgid "Inbox"
 msgstr "Buzón"
 
+msgid "User not found: %1"
+msgstr "Usuario no encontrado: %1"
+
 msgid "User is not active"
 msgstr "El usuario no está activo"
 
