--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4351,3 +4351,9 @@ msgstr "Gráfico circular (Tópicos abiertos por categorías)"
 
 msgid "Canceled"
 msgstr "Cancelado"
+
+msgid "Datefield"
+msgstr "Campo de fecha"
+
+msgid "Timefield"
+msgstr "Campo de tiempo"
