--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -1515,6 +1515,9 @@ msgstr "Rollback fallido"
 msgid "PENDING"
 msgstr "Pendiente"
 
+msgid "SUPERSEDED"
+msgstr "Sobreseído"
+
 # Job email types
 msgid "started"
 msgstr "iniciado"
