--- a/lib/Baseliner/I18N/en.po
+++ b/lib/Baseliner/I18N/en.po
@@ -154,3 +154,54 @@ msgstr "Critical"
 
 msgid "Común"
 msgstr "Common"
+
+msgid "Incidencias"
+msgstr "Issues"
+
+msgid "Revisiones"
+msgstr "Revisions"
+
+msgid "Proyectos"
+msgstr "Projects"
+
+msgid "Ficheros"
+msgstr "Files"
+
+msgid "Tareas"
+msgstr "Tasks"
+
+msgid "Requerimientos"
+msgstr "Requirements"
+
+msgid "Defectos"
+msgstr "Defects"
+
+msgid "Bugs"
+msgstr "Bugs"
+
+msgid "Casos de Prueba"
+msgstr "Test cases"
+
+msgid "Funcionalidades"
+msgstr "Functionalities"
+
+msgid "Documentos"
+msgstr "Documents"
+
+msgid "Planes_de_pruebas"
+msgstr "Test plans"
+
+msgid "Solicitudes"
+msgstr "Requests"
+
+msgid "Tópicos"
+msgstr "Topics"
+
+msgid "Topics"
+msgstr "Topics"
+
+
+
+
+
+
