--- a/lib/Baseliner/I18N/en.po
+++ b/lib/Baseliner/I18N/en.po
@@ -110,6 +110,9 @@ msgstr "Delivered"
 msgid "Integración"
 msgstr "Integration"
 
+msgid "Integracion"
+msgstr "Integration"
+
 msgid "Análisis"
 msgstr "Analysis"
 
@@ -205,3 +208,21 @@ msgstr "Topics"
 
 msgid "noun:Run"
 msgstr "Run"
+
+msgid "Repositorios"
+msgstr "Repositories"
+
+msgid "Planes de pruebas"
+msgstr "Test plans"
+
+msgid "Seguimiento de proyecto"
+msgstr "Project tracking"
+
+msgid "Funcional"
+msgstr "Functional"
+
+msgid "Organico"
+msgstr "Organic"
+
+msgid "Topicos"
+msgstr "Topics"
