Role saved message

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4448,3 +4448,5 @@ msgstr "Guardar role"
 msgid "Role saved successfully"
 msgstr "Role guardado correctamente"
 
+msgid "Administration manual"
+msgstr "Manual de administración"
