User manual translated

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4450,3 +4450,6 @@ msgstr "Role guardado correctamente"
 
 msgid "Administration manual"
 msgstr "Manual de administración"
+
+msgid "User manual"
+msgstr "Manual de usuario"
