nuevos ambitos notificaciones

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4469,3 +4469,15 @@ msgstr "Manual de administración"
 
 msgid "User manual"
 msgstr "Manual de usuario"
+
+msgid "baseline"
+msgstr "Entorno"
+
+msgid "Notification added"
+msgstr "Notificación añadida"
+
+msgid "Error adding notification: "
+msgstr "Error añadiendo notificación"
+ 
+
+
