error message when no initial state available

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -18,6 +18,9 @@ msgstr "No hay"
 msgid "Pattern"
 msgstr "Patrón"
 
+msgid "The topic category %1 does not have any initial status assigned. Contact your administrator."
+msgstr "La categoría %1 no tiene un estado inicial asignado. Contacte al administrador."
+
 msgid "Progress"
 msgstr "Avance"
 
