Lifecycle collapsable or fixed by button

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4474,4 +4474,5 @@ msgstr "Pase suspendido a la espera de una acción manual de usuario"
 msgid "Job %1 cancelled externally"
 msgstr "Pase %1 cancelado externamente"
 
-
+msgid "Fix explorer"
+msgstr "Fijar explorador"
