--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -3,6 +3,42 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+msgid "1 month ago"
+msgstr ""
+
+msgid "just now"
+msgstr "hace un instante"
+
+msgid "%1 seconds ago"
+msgstr "hace %1 segundos"
+
+msgid "1 minute ago"
+msgstr "hace 1 minuto"
+
+msgid "%1 minutes ago"
+msgstr "hace %1 minutos"
+
+msgid "1 hour ago"
+msgstr "hace 1 hora"
+
+msgid "%1 hours ago"
+msgstr "hace %1 horas"
+
+msgid "%1 days ago"
+msgstr "hace %1 días"
+
+msgid "%1 weeks ago"
+msgstr "hace %1 semanas"
+
+msgid "%1 months ago"
+msgstr "hace %1 meses"
+
+msgid "1 year ago"
+msgstr "hace 1 año"
+
+msgid "%1 years ago"
+msgstr "hace %1 años"
+
 msgid "To Open"
 msgstr "Abrir"
 
