references grid in grid

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -39,6 +39,9 @@ msgstr "hace 1 año"
 msgid "%1 years ago"
 msgstr "hace %1 años"
 
+msgid "Discussion"
+msgstr "Discusión"
+
 msgid "To Open"
 msgstr "Abrir"
 
