topic model moved to topic_lib, drag-and-drop for TopicGrid started, not working, ie style fixes

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -66,6 +66,12 @@ msgstr "No hay"
 msgid "Pattern"
 msgstr "Patrón"
 
+msgid "Server not available. Retry?"
+msgstr "Servidor no disponible. ¿Reintentar?"
+
+msgid "Sending Request..."
+msgstr "Enviando Petición..."
+
 msgid "This comment does not exist anymore"
 msgstr "El comentario ha sido borrado"
 
