--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -1204,10 +1204,10 @@ msgid "Services"
 msgstr "Servicios"
 
 msgid "Comment"
-msgstr "Observación"
+msgstr "Comentario"
 
 msgid "Comments"
-msgstr "Observaciones"
+msgstr "Comentarios"
 
 msgid "Please, click on the following links"
 msgstr "Por favor, haga clic en los siguientes enlaces"
@@ -2992,12 +2992,12 @@ msgstr "¿Seguro que quiere borrar el entorno"
 
 # lib/Baseliner/Controller/Topic.pm (171)
 msgid "Comment added"
-msgstr "Observación añadida"
+msgstr "Comentario añadido"
 
 
 # lib/Baseliner/Controller/Topic.pm (175)
 msgid "Error adding Comment: %1"
-msgstr "Error añadiendo observación: %1"
+msgstr "Error añadiendo comentario: %1"
 
 
 # lib/Baseliner/Controller/Topic.pm (235)
@@ -3102,7 +3102,7 @@ msgstr "Editar tópico"
 
 # root/comp/topic_grid.js (275)
 msgid "Create comment"
-msgstr "Crear observación"
+msgstr "Crear comentario"
 
 
 # root/comp/topic_grid.js (537)
