--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -42,6 +42,9 @@ msgstr "hace %1 años"
 msgid "Loading Error"
 msgstr "Error de Carga"
 
+msgid "Current topic status '%1' does not match the real status '%2'. Please refresh."
+msgstr "Estado actual del tópico '%1' no coincide con el estado real '%2'. Por favor, recargue antes de reintentar."
+
 msgid "No items found"
 msgstr "No se han encontrado datos"
 
