--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -63,6 +63,9 @@ msgstr "Seleccione el campo %1 primero o recargue"
 msgid "Error loading topic"
 msgstr "Error cargando el tópico"
 
+msgid "graph_high_load %1"
+msgstr "%1 nodos recibidos. Procesarlos puede tardar. ¿Desea continuar?"
+
 msgid "Field %1 reset due to change in %2"
 msgstr "Campo %1 reiniciado debido a un cambio en %2"
 
