--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4614,5 +4614,7 @@ msgstr "Notificación añadida"
 msgid "Error adding notification: "
 msgstr "Error añadiendo notificación"
  
+msgid "Related"
+msgstr "Relacionados"
 
 
