timeline fieldlet, with Prefs.js_date_format, no more system field dates

--- a/lib/Baseliner/I18N/en.po
+++ b/lib/Baseliner/I18N/en.po
@@ -4,6 +4,12 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8    \n"
 "Content-Transfer-Encoding: 8bit\n"
 
+msgid "class_date_format"
+msgstr "%m/%d/%Y"
+
+msgid "js_date_format"
+msgstr "m/d/Y"
+
 # Job Status Codes
 msgid "IN EDIT"
 msgstr "In Edit"
