master_cal id incremental schema

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -90,6 +90,9 @@ msgstr "Marcar como no leído"
 msgid "Milestone"
 msgstr "Hito"
 
+msgid "Milestones"
+msgstr "Hitos"
+
 msgid "Current topic status '%1' does not match the real status '%2'. Please refresh."
 msgstr "Estado actual del tópico '%1' no coincide con el estado real '%2'. Por favor, recargue antes de reintentar."
 
