--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4682,3 +4682,6 @@ msgstr "Cambiar estado del tópico lógicamente (Sin despliegue)"
 
 msgid "Can delete topic in this category"
 msgstr "Puede borrar tópicos de la categoría"
+
+msgid "Topic was modified before your changes. Are you sure you want to save the topic?"
+msgid "Tópico fue modificado antes de tus cambios. "¿Seguro que quiere guardar el tópico?"
