tlc system, with about, and Baseliner check, global trial license, better cla help, OpenSSL RSA lib in bootstrap

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -3,6 +3,12 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+msgid "Site Information"
+msgstr "Datos de Registro"
+
+msgid "Site License"
+msgstr "Datos de Registro"
+
 msgid "class_date_format"
 msgstr "%d/%m/%Y"
 
