- CI dbi connection and services DB deploy - PAUSED for job - job dashboard aggregation fixes - CI->run_service - job->natures - Storable job_stash serializer - _ci( ns=>..., moniker=>... ) - DSL current statement tracking - newjob from lifecycle ok - top service level - service rename stash fix - Services->launch with Catpure::Tiny

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -696,6 +696,9 @@ msgstr "Formularios de Configuración"
 msgid "Config List"
 msgstr "Configuración"
 
+msgid "Items"
+msgstr "Elementos"
+
 msgid "Configuration Items"
 msgstr "Elementos de Configuración"
 
@@ -2261,6 +2264,9 @@ msgstr "Precedencia"
 msgid "Table"
 msgstr "Tabla"
 
+msgid "Run Summary"
+msgstr "Ejecución"
+
 msgid "Run"
 msgstr "Ejecutar"
 
@@ -2313,7 +2319,7 @@ msgid "Resume Job"
 msgstr "Reanudar Pase"
 
 msgid "unspecified"
-msgstr "Sin espcificar"
+msgstr "Sin especificar"
 
 msgid "Manual Deployment"
 msgstr "Despliegue Manual"
@@ -3522,6 +3528,9 @@ msgstr "¿Seguro que quiere borrar las prioridades seleccionadas?"
 
 msgid "Changeset"
 msgstr "Cambio"
+
+msgid "Changesets"
+msgstr "Cambios"
 
 msgid "Edit status"
 msgstr "Editar estado"
