--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4713,3 +4713,5 @@ msgstr "Tópico fue modificado por otro usuario y se perderán esos cambios. ¿S
 msgid "Topic changed status before. Do you  want to refresh the topic?"
 msgstr "Tópico cambió de estado anteriormente. ¿Quieres refrescar el tópico?"
 
+msgid "Checkbox"
+msgstr "Casilla de verificación"
