log action now task (the true name of the rule items)

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -1101,6 +1101,12 @@ msgstr "acción"
 msgid "actions"
 msgstr "acciones"
 
+msgid "Task"
+msgstr "Tarea"
+
+msgid "Tasks"
+msgstr "Tareas"
+
 msgid "Action"
 msgstr "Acción"
 
