nuevos estados de pase, monitor

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -1708,7 +1708,7 @@ msgid "SUSPENDED"
 msgstr "Suspendido"
 
 msgid "WAITING"
-msgstr "Esperando CHM"
+msgstr "Esperando"
 
 msgid "DONE"
 msgstr "Finalizado"
