modificaciones en dashlets topicos por estado, propiedad color en tabla estados

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4790,3 +4790,6 @@ msgstr "Descripción"
 
 msgid "Topics by status"
 msgstr "Tópicos por estado"
+
+msgid "Topics open by status"
+msgstr "Tópicos abiertos por estado"
