topic is_ready and is_loaded system, better detection of changed fields, close with Ext.msg, superbox with is_ready, superbox without form.getValues modifier, JsonStore with a is_loaded flag

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -225,6 +225,9 @@ msgstr "Licencias"
 msgid "Copyright Notices"
 msgstr "Notificaciones de Copyright"
 
+msgid "Topic has changed but has not been saved (changed fields: %1). Save topic now?"
+msgstr "El tópico ha cambiado pero no se ha guardado (campos: %1). ¿Desea guardar el tópico?"
+
 msgid "Remote"
 msgstr "Remoto"
 
