rule versioning in mongo, icons, icon for cog in palette

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -1050,6 +1050,12 @@ msgstr "Servicios Genéricos"
 msgid "Job Services"
 msgstr "Servicios de Job"
 
+msgid "Expand All"
+msgstr "Expandir Todo"
+
+msgid "Collapse All"
+msgstr "Colapsar Todo"
+
 msgid "My Searches"
 msgstr "Mis Búsquedas"
 
