Control revision project when dropping to a changeset

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4917,3 +4917,8 @@ msgstr "Cambios de estado"
 msgid "Transition"
 msgstr "Transición"
 
+msgid "The changeset must be assigned to at least one project"
+msgstr "El cambio tiene que estar asignado a algún proyecto"
+
+msgid "The revision does not belong to any of the changeset projects"
+msgstr "La revisión no pertenece a ningún proyecto del cambio"
