trapped monitor status message

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -1791,6 +1791,9 @@ msgstr "Rechazado"
 msgid "CANCELLED"
 msgstr "Cancelado"
 
+msgid "TRAPPED"
+msgstr "Capturado"
+
 msgid "PAUSED"
 msgstr "Retenido"
 
